# Sports-Analytics

./: .dockerignore  .gitignore  CLAUDE.md  DOLT_REMOTE.md  Dockerfile  README.md  manifest  nba_md.md  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: methodology.py  streamlit_app.py  ui.py
docs/: ARCHITECTURE.md  DATA_ROADMAP.md  DEPLOYMENT.md  PRODUCT_ROADMAP.md  PRODUCT_SURFACES.md  PWA_PARITY.md  TRACKING_AVAILABILITY.md
mobile/: .gitignore  README.md  app.json  eslint.config.js  package-lock.json  package.json
mobile/app/: _layout.tsx  settings.tsx
mobile/src/: theme.ts
mobile/tests/: favorites.test.ts  format.test.ts  url.test.ts
sports-analytics/: Untitled.ipynb  nba_api_downloader.py  nba_csv_downloader.py  nba_player_analyzer.py  nba_requirements.txt  nba_scraper.py  pyproject.toml  requirements.txt  test.ipynb
tests/: test_analysis.py  test_api.py  test_api_health.py  test_api_security.py  test_app.py  test_app_offline.py  test_ask.py  test_cache.py  test_client.py  test_clutch.py  test_config.py  test_cup.py  test_darko.py  test_draft.py  test_explore.py  test_forecast_validation.py  test_four_factors.py  test_game_story.py  test_games.py  test_insights.py  test_lineups.py  test_ml.py  test_pbp.py  test_player_forecast.py  test_positions.py  test_posters.py  test_roster_forecast.py  test_roster_scenario.py  test_salaries.py  test_season.py  test_season_forecast.py  test_serve.py  test_similarity.py  test_simulate.py  test_splits.py  test_stints.py  test_team_compare.py  test_tracking.py  test_viz.py
(+94 files in other folders)
